[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Animations/Player/CubicAnimations.json" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
SPEED = 80
HEALTH = 1
lock_move_time = 0.35
play_hurt_animation = false
DAMAGE = 1

[node name="PlayerAnimations" parent="." index="0" instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="." index="2"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea" index="0"]

position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="LeftFireOrigin" type="Position2D" parent="." index="3"]

position = Vector2( -11, 4 )

[node name="RightFireOrigin" type="Position2D" parent="." index="4"]

position = Vector2( 11, 4 )

[node name="UpFireOrigin" type="Position2D" parent="." index="5"]

position = Vector2( 0, -7 )

[node name="DownFireOrigin" type="Position2D" parent="." index="6"]

position = Vector2( 0, 13 )

[node name="Camera2D" type="Camera2D" parent="." index="7"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]

[connection signal="area_entered" from="HitArea" to="." method="_on_TriggerDetector_area_enter"]

[connection signal="area_exited" from="HitArea" to="." method="_on_TriggerDetector_area_exit"]


